@@ -13,6 +13,7 @@ import org.conquest.conquestSpawners.guiHandler.guiEditingHandler.GUISessionMana
 import org.conquest.conquestSpawners.guiHandler.guiEditingHandler.guiMenuModels.DuelMenuMeta;
 import org.conquest.conquestSpawners.guiHandler.guiEditingHandler.guiMenuModels.FillerItemModel;
 import org.conquest.conquestSpawners.guiHandler.guiEditingHandler.guiMenuModels.GUIFileEnums;
+import org.conquest.conquestSpawners.guiHandler.guiEditingHandler.guiMenuModels.SpawnerMenuContext;
 import org.conquest.conquestSpawners.guiHandler.guiEditingHandler.guiUtilites.EditingMenuHolder;
 import org.conquest.conquestSpawners.guiHandler.guiEditingHandler.guiUtilites.ItemBuilder;
 import org.conquest.conquestSpawners.mobSpawningHandler.spawnerSetup.MobDataModel;
@@ -58,19 +59,32 @@ public class UpgradeSpawnerMenu {
             }
         }
 
-        // 🧩 Context placeholders from mob config
-        String spawnerId = "allay";
-        int spawnerLevel = 2;
+        // ✅ Pull context from session (set by SpawnerInteractionListener -> GUIOpener.open(..., ctx))
+        SpawnerMenuContext ctx = null;
+        Object rawCtx = session.getEditingSpawnerContext();
+        if (rawCtx instanceof SpawnerMenuContext cast) ctx = cast;
+
+        if (ctx == null || !ctx.isValid()) {
+            // No context => build menu with empty placeholders so players don't see wrong info
+            renderLayout(inv, meta, Collections.emptyMap(), false);
+            player.openInventory(inv);
+            session.markOpen();
+            playOpen(meta, player);
+            return;
+        }
+
+        String mobKey = ctx.getMobKey();
+        int spawnerLevel = ctx.getLevel();
 
         MobManager mobManager = ConquestSpawners.getInstance().getConfigurationManager().getMobManager();
-        MobDataModel mobData = mobManager.getMob(spawnerId);
+        MobDataModel mobData = mobManager.getMob(mobKey);
 
-// Compute maxLevel BEFORE using it anywhere
         int maxLevel = 0;
         if (mobData != null && mobData.getSpawnerLevels() != null && !mobData.getSpawnerLevels().isEmpty()) {
             maxLevel = Collections.max(mobData.getSpawnerLevels().keySet());
         }
-        boolean isMaxed = spawnerLevel >= maxLevel;
+
+        boolean isMaxed = maxLevel > 0 && spawnerLevel >= maxLevel;
 
         SpawnerLevelModel levelData = (mobData != null && mobData.getSpawnerLevels() != null)
                 ? mobData.getSpawnerLevels().get(spawnerLevel)
@@ -84,35 +98,48 @@ public class UpgradeSpawnerMenu {
                 "upgrade_cost", String.valueOf(levelData.getCostToUpgradeResolved()),
                 "upgrade_path", spawnerLevel + " → " + (isMaxed ? spawnerLevel : (spawnerLevel + 1))
         )
-                : Collections.emptyMap();
+                : Map.of(
+                "spawn_rate", "?",
+                "spawn_count", "?",
+                "xp_bonus", "?",
+                "upgrade_cost", "?",
+                "upgrade_path", spawnerLevel + " → " + spawnerLevel
+        );
 
-        // 🛠 Choose appropriate layout icons
-        if (meta.getLayout() != null) {
-            List<Map<String, Object>> layout = meta.getLayout();
-
-            Map<Integer, Map<String, Object>> uniqueSlots = new HashMap<>();
-            for (Map<String, Object> itemData : layout) {
-                int slotId = (int) itemData.getOrDefault("slot", -1);
-                if (slotId < 0 || slotId >= size) continue;
-
-                String action = ((String) itemData.getOrDefault("action", "")).toLowerCase(Locale.ROOT);
-                if ("upgrade".equals(action) && isMaxed) continue;
-                if ("maxed".equals(action) && !isMaxed) continue;
-
-                uniqueSlots.putIfAbsent(slotId, itemData);
-            }
-
-            for (Map.Entry<Integer, Map<String, Object>> entry : uniqueSlots.entrySet()) {
-                ItemStack menuItem = ItemBuilder.create(entry.getValue(), placeholderMap);
-                ItemBuilder.setPlaceholderTag(menuItem);
-                inv.setItem(entry.getKey(), menuItem);
-            }
-        }
+        renderLayout(inv, meta, placeholderMap, isMaxed);
 
         player.openInventory(inv);
         session.markOpen();
+        playOpen(meta, player);
+    }
 
-        if (meta.getEffects().containsKey("open")) {
+    private static void renderLayout(Inventory inv, DuelMenuMeta meta, Map<String, String> placeholderMap, boolean isMaxed) {
+        if (meta.getLayout() == null) return;
+
+        int size = inv.getSize();
+        List<Map<String, Object>> layout = meta.getLayout();
+
+        Map<Integer, Map<String, Object>> uniqueSlots = new HashMap<>();
+        for (Map<String, Object> itemData : layout) {
+            int slotId = (int) itemData.getOrDefault("slot", -1);
+            if (slotId < 0 || slotId >= size) continue;
+
+            String action = ((String) itemData.getOrDefault("action", "")).toLowerCase(Locale.ROOT);
+            if ("upgrade".equals(action) && isMaxed) continue;
+            if ("maxed".equals(action) && !isMaxed) continue;
+
+            uniqueSlots.putIfAbsent(slotId, itemData);
+        }
+
+        for (Map.Entry<Integer, Map<String, Object>> entry : uniqueSlots.entrySet()) {
+            ItemStack menuItem = ItemBuilder.create(entry.getValue(), placeholderMap);
+            ItemBuilder.setPlaceholderTag(menuItem);
+            inv.setItem(entry.getKey(), menuItem);
+        }
+    }
+
+    private static void playOpen(DuelMenuMeta meta, Player player) {
+        if (meta.getEffects() != null && meta.getEffects().containsKey("open")) {
             meta.getEffects().get("open").play(player);
         }
     }
